sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:11: error: not found: value j
    while ((j > 0) && copy = true) {
            ^AlgInsertionSort:14: error: not found: value j
      if (plusPetitQue(j-1,v) == false) {
                       ^AlgInsertionSort:16: error: not found: value j
        copie(j-1, j)
              ^AlgInsertionSort:16: error: not found: value j
        copie(j-1, j)
                   ^AlgInsertionSort:17: error: not found: value j
        w = j-1
            ^AlgInsertionSort:20: error: not found: value j
      j = j-1
      ^