sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  
  var copy:Boolean = true
  
  for (i <- 1 to getNombreValeurs()-1) {
    
    var v:Int = getValeur(i)
    var w:Int = i
    
    while ((j > 0) && copy = true) {
      copy = false
      
      if (plusPetitQue(j-1,v) == false) {
        
        copie(j-1, j)
        w = j-1
        copy = true
      }
      j = j-1
 
    }
    setValeur(w,v)
  }
  
  
}